--- a/innsight-frontend/package.json
+++ b/innsight-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^11.7.3",
     "i18next": "^25.1.3",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.1",
